<resources>
    <string name="app_name">Aequalis</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="tab_gastos">GASTOS</string>
    <string name="tab_saldos">SALDOS</string>

    <!-- Global -->
    <string name="globalTitulo">Titulo</string>

    <!-- Activity grupos -->
    <string name="gruposDescription">Nuevo grupo</string>

    <!-- Activity nuevo gasto -->
    <string name="nuevoGastoCantidadHint">Cantidad</string>
    <string-array name="nuevoGastoCantidades">
        <item>EUR</item>
        <item>DOL</item>
        <item>YEN</item>
        <item>RUB</item>
    </string-array>
    <string name="nuevoGastoFechaHint">Fecha</string>
    <string name="nuevoGastoPagadoHint">Pagado por</string>

    <!-- Activity nuevo grupo -->
    <string name="nuevoGrupoDescripcionHint">Descripcion</string>
    <string name="nuevoGrupoAnnadir">Añadir</string>
    <string name="nuevoGrupoParticipantesHint">Participante</string>

    <!-- Toolbar nuevo gasto -->
    <string name="toolbarNuevoGastoTitle">Nuevo gasto</string>

    <!-- Toolbar nuevo grupo -->
    <string name="toolbarNuevoGrupoTitle">Nuevo grupo</string>

    <string name="text_pagado_por">Pagado por %1$s</string>
    <string name="text_coste_gasto">%1$.2f%2$s</string>
    <string name="text_info_deuda">%1$s debe a %2$s</string>
    <string name="label_nuevo_grupo">Nuevo grupo</string>
    <string name="error_campos_obligatorios">Todos los campos son obligatorios</string>
    <string name="error_algo_mal">Ha ocurrido algo inesperado. No se han guardado los datos.</string>
    <string name="error_user_vacio">Debes introducir un username</string>
    <string name="error_no_participantes">Se debe introducir al menos un participante</string>
    <string name="info_grupo_add">Se ha creado el grupo \"%1$s\"</string>
    <string name="label_nuevo_gasto">Nuevo gasto</string>
    <string name="error_participante_no_existe">Ese participante no está en el grupo</string>
    <string name="info_gasto_add">Gasto añadido con éxito</string>
    <string name="error_no_cantidad">Se debe introducir una cantidad</string>
    <string name="error_cantidad_0">La cantidad introducida debe ser mayor que 0</string>
    <string name="text_username_participante">(@%1$s)</string>
    <string name="error_participante_no_existe_ddbb">No existe el usuario indicado</string>
    <string name="registro">Registro</string>
    <string name="email">Email</string>
    <string name="contraseña">Contraseña</string>
    <string name="confContraseña">Confirmación Contraseña</string>
    <string name="usuario">Nombre de usuario</string>
    <string name="click_to_login">Ya tengo cuenta</string>
    <string name="login">Login</string>
    <string name="click_to_register">Crear cuenta nueva</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="registrarse">Registrarse</string>
    <string name="introduce_email_contraseña">Introduce el Email y la Contraseña</string>
    <string name="introduce_email">Introduce el Email</string>
    <string name="introduce_password">Introduce la contraseña</string>
    <string name="login_successful">El Login se ha realizado correctamente</string>
    <string name="autenticacion_fallida">Autenticación fallida</string>
    <string name="usuario_creado">Usuario Creado</string>
    <string name="error_usuario_creado">Error al crear el usuario</string>
    <string name="cuenta_creada">Cuenta creada</string>
    <string name="error_cuenta_creada">El correo ya esta asociado a una cuenta</string>
    <string name="nombre">Nombre completo</string>
    <string name="usuario_existente">El nombre de usuario no esta disponible</string>
    <string name="introduce_confPassword">Introduce la confirmación de la contraseña</string>
    <string name="introduce_nombre">Introduce el nombre</string>
    <string name="introduce_username">Introduce el nombre de ususario</string>
    <string name="password_coincidir">Las contraseñas deben de coincidir</string>
    <string name="error_participante_added">El participante introducido ya está en el grupo.</string>
    <string name="error_creador_added">Tú ya estás en el grupo.</string>
    <string name="pagado">Pagado</string>
    <string name="no_pagado">Marcar como pagado</string>
    <string name="info_operacion_completada">Operación completada con éxito</string>
    <string name="error_no_pagador">Se debe seleccionar un pagador</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>
    <string name="remove_grupo_dialog">¿Desea eliminar el grupo seleccionado?</string>
    <string name="remove_grupo_title">Eliminar grupo</string>
    <string name="remove_aceptar">Aceptar</string>
    <string name="remove_cancelar">Cancelar</string>
    <string name="info_grupo_borrado">Se ha borrado el grupo correctamente</string>
    <string name="remove_gasto_dialog">¿Desea eliminar el gasto seleccionado?</string>
    <string name="remove_gasto_title">Eliminar gasto</string>
    <string name="info_gasto_eliminado">Gasto eliminado con éxito.</string>

</resources>