<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NuevoGastoActivity">

    <include
        layout="@layout/toolbar_nuevo_gasto"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/mainMargin"
        android:layout_marginTop="@dimen/gruposTop"
        android:layout_marginEnd="@dimen/mainMargin"
        android:layout_marginBottom="@dimen/mainMargin"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/globalTitulo"
                android:hint="@string/globalTitulo"/>

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/mainMargin">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/nuevoGastoCantidadHint">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nuevoGastoCantidadHint"
                    android:hint="@string/nuevoGastoCantidadHint"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Spinner
                android:id="@+id/nuevoGastoSpinnerCantidad"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/mainMargin"/>


        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/mainMargin">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nuevoGastoFecha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nuevoGastoFechaHint"
                android:hint="@string/nuevoGastoFechaHint"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/mainMargin">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nuevoGastoPagadoHint"
                android:hint="@string/nuevoGastoPagadoHint"/>

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/mainMargin"/>

    </LinearLayout>
</RelativeLayout>